--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/telescope": "^4.10",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
+        "renatomarinho/laravel-page-speed": "^2.1",
         "shetabit/visitor": "^3.1",
         "silviolleite/laravelpwa": "^2.0",
         "spatie/laravel-backup": "^8.1",
